automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -110,12 +110,12 @@ clearfix.after{
 }
 
 [class*="col-"]{
-  margin-left:2%
+  margin-left:2%;
 }
 
 .first {
 
-    margin-left:0%s
+    margin-left:0%;
 }
 
 /*sections*/
