--- a/css/style.css
+++ b/css/style.css
@@ -114,8 +114,11 @@ clearfix.after{
 }
 
 .first {
-
     margin-left:0%;
 }
 
 /*sections*/
+section{
+  padding: 20px;
+  margin-bottom: 20 px;
+}
