--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ img, video, audio {
   background: #ccc
 }
 
-clearfix.after{
+.clearfix:after{
   content: ".";
   display: block;
   clear:both;
