--- a/css/style.css
+++ b/css/style.css
@@ -128,3 +128,20 @@ section{
   padding: 20px;
   margin-bottom: 20 px;
 }
+
+/*social*/
+#social {
+  position: fixed;
+  top: 200px;
+  right: 40px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a{
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: yellow;
+  
+}
